manifests/DEPRECATED/monitoring/prometheus/base/service.yaml
# Copyright (C) 2016, 2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  label:
    k8s-app: prometheus
spec:
  type: LoadBalancer
  selector:
    k8s-app: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: http
